utf8 encoding for html templates

--- a/map/templates/map/stations.html
+++ b/map/templates/map/stations.html
@@ -2,8 +2,10 @@
 <html>
 
 <head>
+<meta charset="UTF-8">
 <title>adaproject</title>
 </head>
+
 <body>
 <h1>Dummy list of stations</h1>
 <p>List of all train stations in Switzerland</p>
