fixed bad behavior when calling with empty departure time

--- a/map/templates/map/isochrone.html
+++ b/map/templates/map/isochrone.html
@@ -8,6 +8,6 @@
 
 <body>
 <h1>Dummy isochrone map</h1>
-<p>Map for coordinates ({{lat}},{{lng}}), with departure time set at {{dep_time.hour}}.{{dep_time.minute}}.</p>
+<p>Map for coordinates ({{lat}},{{lng}}), with departure time set at {{dep_time}}.</p>
 </body>
 </html>
