--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -66,10 +66,9 @@
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
 		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
 	        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-		<!-- <script -->
-     <!-- src="https://maps.googleapis.com/maps/api/js?key=YOUR_KEY"></script> -->
+		<script
+     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPNy-zRV6v_zQx6B8CC-qPdWCCg5Y8kXs"></script>
 		<!-- <script src="js/scripts.js"></script> -->
-    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
 
 	</body>
