--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -1,21 +1,19 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-		<meta charset="utf-8">
-		<title>2 column Google maps, foursquare (outer scroll)</title>
-		<meta name="generator" content="Bootply" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<!-- <link href="css/bootstrap.min.css" rel="stylesheet"> -->
-    <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-    <!--[if lt IE 9]>
-			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		<link href="css/styles.css" rel="stylesheet">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
-	</head>
-	<body>
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=UTF-8">
+	<meta charset="utf-8">
+	<title></title>
+	<meta name="generator" content="Bootply" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link href="{% static 'map/css/bootstrap.min.css' %}" rel="stylesheet">
+  <!--[if lt IE 9]>
+		<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	<![endif]-->
+  <link href="{% static 'map/css/styles.css' %}" rel="stylesheet">
+</head>
+<body>
 <!-- begin template -->
 <div class="navbar navbar-custom navbar-fixed-top">
  <div class="navbar-header"><a class="navbar-brand" href="#">Brand</a>
@@ -62,14 +60,13 @@
 </div>
 <!-- end template -->
 
-	<!-- script references -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-		<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
-	        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-		<script
-     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPNy-zRV6v_zQx6B8CC-qPdWCCg5Y8kXs"></script>
-		<!-- <script src="js/scripts.js"></script> -->
-    <script src="{% static 'js/scripts.js' %}"></script>
+<!-- script references -->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPNy-zRV6v_zQx6B8CC-qPdWCCg5Y8kXs"></script>
 
-	</body>
+<script src="{% static 'map/js/scripts.js' %}"></script>
+
+</body>
 </html>
