implemented closest_stops

--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -67,6 +67,7 @@
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBPNy-zRV6v_zQx6B8CC-qPdWCCg5Y8kXs"></script>
 
 <script src="{% static 'map/js/scripts.js' %}"></script>
+<script src="{% static 'map/js/utils.js' %}"></script>
 
 </body>
 </html>
