--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -16,39 +16,24 @@
 <body>
 <!-- begin template -->
 <div class="navbar navbar-custom navbar-fixed-top">
- <div class="navbar-header"><a class="navbar-brand" href="#">Brand</a>
-      <a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
-        <li>&nbsp;</li>
-      </ul>
-      <form class="navbar-form">
-        <div class="form-group" style="display:inline;">
-          <div class="input-group">
-            <div class="input-group-btn">
-              <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="glyphicon glyphicon-chevron-down"></span></button>
-              <ul class="dropdown-menu">
-                <li><a href="#">Category 1</a></li>
-                <li><a href="#">Category 2</a></li>
-                <li><a href="#">Category 3</a></li>
-                <li><a href="#">Category 4</a></li>
-                <li><a href="#">Category 5</a></li> 
-              </ul>
-            </div>
-            <input type="text" class="form-control" placeholder="What are searching for?">
-            <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span> </span>
-          </div>
-        </div>
-      </form>
-    </div>
+  <div class="navbar-header">
+    <a class="navbar-brand" href="#">Public Transport Analyzer</a>
+    <span>&nbsp;&nbsp;&nbsp;&nbsp;</span>
+  </div>
+  <div class="navbar-collapse collapse">
+
+    <form class="navbar-form form-inline">
+      <div class="form-group">
+        <label for="deptime_select">Departure at: </label>
+        <select class="form-control" id="deptime_select">
+          {% for i in "x"|ljust:"24" %}
+            <option {% if forloop.counter0 == 8 %} selected="selected" {% endif %}>{{ forloop.counter0 }}</option>
+          {% endfor %}
+        </select>
+      </div>
+    </form>
+
+  </div>
 </div>
 
 <div id="map-canvas"></div>
