--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -55,7 +55,7 @@
 
       <div id="visible_on_active_stop" style="display:none;">
         <div class="panel panel-default" id="active_stop_container">
-          <div class="panel-heading">Active stop</div>
+          <div class="panel-heading" id="active_stop_header"></div>
           <div class="panel-body" id="active_stop_text"></div>
         </div>
 
